--- a/spaceX.css
+++ b/spaceX.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@300;500;600&display=swap');
+
 
 
 body {
-    font-family: 'Familjen Grotesk', sans-serif;
+    font-family: 'Familjen Grotesk',sans-serif;
     background: #000;
     color: #fff;
   }
@@ -44,7 +45,7 @@ body {
   
   /* Desktop Menu */
   .desktop-main-menu {
-    margin-right: 50px;
+    margin-right: 320px;
   }
   
   .desktop-main-menu ul {
@@ -72,7 +73,7 @@ body {
 
 .desktop-main-menu ul li a:hover::after {
   transform: scaleX(1);
-  transform-origin: left center;
+  transform-origin: right center;
   transition-duration: 0.4s;
 }
 
@@ -88,14 +89,14 @@ section {
 
 .section-inner {
   position: absolute;
-  bottom: 200px;
+  bottom: 100px;
   left: 150px;
   max-width: 560px;
 }
 
 .section-inner h4 {
   font-size: 22px;
-  margin-bottom: 5px;
+  margin-bottom: -40px;
   font-weight: 300;
   animation: fadeInUp 0.5s ease-in-out;
 }
@@ -114,14 +115,14 @@ section {
 }
 /* Background images */
 .section-a {
-  background-image: url('./images/section-d.webp');
+  background-image: url('./images/back_image1.jpg');
 }
 .section-b {
-  background-image: url('./images/section-b.webp');
+  background-image: url('./images/background2.jpg');
 }
 
 .section-c {
-  background-image: url('./images/section-e.webp');
+  background-image: url('./images/background3.webp');
 }
 .section-f {
   background-image: url('./images/section-f.webp');
@@ -132,7 +133,7 @@ section {
   display: inline-block;
   cursor: pointer;
   text-align: center;
-  min-width: 130px;
+  min-width: 85px;
   padding: 15px 50px;
   margin-top: 10px;
   border: 2px solid #fff;
@@ -231,33 +232,6 @@ footer ul li a:hover {
 
 .hamburger-bottom {
   transform: translateY(10px);
-}
-
-/* Transition hamburger to X when open */
-.open {
-  transform: rotate(90deg);
-}
-
-.open .hamburger-top {
-  transform: rotate(45deg) translateY(6px) translateX(6px);
-}
-
-.open .hamburger-middle {
-  display: none;
-}
-
-.open .hamburger-bottom {
-  transform: rotate(-45deg) translateY(6px) translateX(-6px);
-}
-/* Overlay */
-.overlay-show {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 3;
 }
 
 /* Stop body scroll */
